<resources>
    <string name="app_name">Lab2</string>
    <string name="language">Language :</string>
    <string name="langEN">English</string>
    <string name="langRU">Russian</string>
    <string name="meter">Meter</string>
    <string name="feet">Feet</string>
    <string name="kilometer">Kilometer</string>
    <string name="mile">Mile</string>
    <string name="santimeter">Santimeter</string>
    <string name="inch">Inch</string>

    <string-array name="langs">
        <item>@string/langEN</item>
        <item>@string/langRU</item>
    </string-array>
</resources>
